syntax = "proto3";

package proxy;

import "github.com/rancher/opni/pkg/apis/core/v1/core.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/rancher/opni/pkg/apis/proxy/v1";

service RegisterProxy {
  rpc Backend(google.protobuf.Empty) returns (BackendInfo);
  rpc Path(google.protobuf.Empty) returns (PathInfo);
  rpc AuthHeaders(HeaderRequest) returns (HeaderResponse);
}

message BackendInfo {
  string          backend       = 1;
  optional string backendCAData = 2;
}

message PathInfo {
  string path = 1;
}

message Header {
  string          key    = 1;
  repeated string values = 2;
}

message HeaderRequest {
  string user = 1;
  core.ReferenceList bindings = 2;
}

message HeaderResponse {
  repeated Header headers = 1;
}
